# ScreenShare-Server

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/network/: ConnectedClient.h  EnetHelper.h  PacketIds.h  UdpServer.h
include/network/packets/: LoginPacket.h  PacketIds.h
proto/: ClientDisconnected.proto  ClientsInfo.proto  Login.proto  StartWatching.proto  StopWatching.proto
proto/proto/: Login.pb.cc  Login.pb.h
src/network/: ConnectedClient.cpp  UdpServer.cpp
